<?xml version="1.0" encoding="utf-8"?>
<!--Copyright 2019 Google LLC-->

<!--Licensed under the Apache License, Version 2.0 (the "License");-->
<!--you may not use this file except in compliance with the License.-->
<!--You may obtain a copy of the License at-->

<!--https://www.apache.org/licenses/LICENSE-2.0-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <RelativeLayout
        android:id="@+id/crash_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/nav_view"
        >


        <Button
            android:id="@+id/user_ids_button"
            android:backgroundTint="@color/green"
            android:textAllCaps="false"
            android:textColor="@color/button_text_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="setUserIDs"
            android:layout_marginTop="20dp"
            android:text="@string/set_user_IDs"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            />

        <Button
            android:id="@+id/custom_logs_button"
            android:backgroundTint="@color/green"
            android:textAllCaps="false"
            android:textColor="@color/button_text_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="setCustomLogs"
            android:text="@string/set_custom_logs"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/user_ids_button"
            />

        <Button
            android:id="@+id/custom_keys_button"
            android:backgroundTint="@color/green"
            android:textAllCaps="false"
            android:textColor="@color/button_text_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/set_custom_keys"
            android:textAlignment="center"
            android:onClick="setCustomKeys"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/custom_logs_button"

            />


        <Button
            android:backgroundTint="@color/red"
            android:textAllCaps="false"
            android:textColor="@color/button_text_white"
            android:id="@+id/crash_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crash"
            android:textAlignment="center"
            android:onClick="crash"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/non_fatal_button"

            />

        <Button
            android:backgroundTint="@color/orange"
            android:textAllCaps="false"
            android:textColor="@color/button_text_white"
            android:id="@+id/non_fatal_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/non_fatal"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:onClick="sendNonFatal"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_alignParentBottom="true"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/event_layout"
        android:layout_above="@id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="invisible"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingTop="5dp"
        android:clickable="false"
        >

        <!-- Search Event -->

        <RelativeLayout
            android:id="@+id/search_event_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_gray_border">

            <TextView
                android:id="@+id/text_event_1"
                android:layout_alignParentStart="true"
                android:paddingStart="15dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_search"
                style="@style/TextColor"
                />

            <EditText
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:layout_gravity="center"
                android:hint="@string/edittext_hint"
                android:maxLength="25"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/text_event_1"
                android:background="@null"
                />

            <Button
                android:id="@+id/send_search_event"
                android:backgroundTint="@color/blue"
                android:textAllCaps="false"
                android:textColor="@color/button_text_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="end"
                android:text="@string/search_button"
                android:textAlignment="center"
                android:onClick="searchEvent"
                android:layout_below="@+id/search"
                android:layout_alignParentEnd="true"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/cart_event_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_gray_border"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/search_event_view">

            <!-- Add to Cart Event -->

            <TextView
                android:id="@+id/text_event_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/event_cart"
                style="@style/TextColor"
                />

            <Button
                android:id="@+id/add_apple"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/red"
                android:textAllCaps="false"
                android:textColor="@color/button_text_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/add_apple"
                android:textAlignment="center"
                android:onClick="cartEvent"
                android:layout_alignParentStart="true"
                android:layout_below="@id/text_event_2"
                />

            <Button
                android:id="@+id/add_pear"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/green"
                android:textAllCaps="false"
                android:textColor="@color/button_text_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/add_pear"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"
                android:onClick="cartEvent"
                android:layout_below="@id/text_event_2"
                />

            <Button
                android:id="@+id/add_orange"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/orange"
                android:textAllCaps="false"
                android:textColor="@color/button_text_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/add_orange"
                android:textAlignment="center"
                android:onClick="cartEvent"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/text_event_2"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/purchase_event_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_gray_border"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/cart_event_view">
            <!-- Purchase Event -->

            <TextView
                android:id="@+id/text_event_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_buy"
                android:paddingStart="15dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                style="@style/TextColor"
                />

            <Button
                android:backgroundTint="@color/blue"
                android:textAllCaps="false"
                android:textColor="@color/button_text_white"
                android:id="@+id/buy_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/buy_button"
                android:textAlignment="center"
                android:onClick="purchaseEvent"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                android:layout_below="@id/text_event_3"
                />

        </RelativeLayout>


    </RelativeLayout>


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="?android:attr/windowBackground"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav_menu" />

</RelativeLayout>